fixed overflow in all components (#43)

--- a/src/views/PollDetail/PollDetail.css
+++ b/src/views/PollDetail/PollDetail.css
@@ -3,7 +3,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  overflow: auto;
+  overflow: scroll;
 }
 
 .pollTitleBox {
