--- a/src/views/PollManagement/PollManagement.css
+++ b/src/views/PollManagement/PollManagement.css
@@ -1,3 +1,13 @@
+.pollManagementWrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
+  overflow: scroll;
+}
+
 .search{
   padding: 15px;
   border-radius: 15px;
